--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <base href="/Angular-Project">
   <title>Train Seat Reservation</title>
 </head>
 <body>
